NIFI-15505 Added tests for property migration of Controller Services in standard-services (#10808)
Signed-off-by: David Handermann <exceptionfactory@apache.org>